# auth-service

./: .gitignore  README.md  compose.override.yml  compose.yml  ssl_renew.sh
.github/workflows/: prod.yml
app-service/: Cargo.toml  Dockerfile
app-service/src/: main.rs
auth-service/: Cargo.toml  Dockerfile
auth-service/assets/: app.js  auth_token.js
auth-service/migrations/: 20250506023252_create_users_table.down.sql  20250506023252_create_users_table.up.sql
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email_client.rs  error.rs  mock_email_client.rs  mod.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  mod.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: hashmap_banned_token_store.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mod.rs  postmark_email_client.rs
auth-service/src/services/data_stores/: banned_token_repository.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs  two_factor_repository.rs  user_repository.rs
auth-service/src/utils/: auth.rs  constants.rs  mod.rs  tracing.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
nginx-conf/: nginx.conf
