[package]
name = "app-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tokio = { version = "1.47.1", features = ["full"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
askama = "0.14.0"

[dev-dependencies]
reqwest = { version = "0.12.23", default-features = false, features = ["json"] }
