[package]
name = "app-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
tower-http = { version = "0.6.11", features = ["fs"] }
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
askama = "0.16.0"

[dev-dependencies]
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
