[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors", "trace"] }
# add the trace feature to tower-http
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["registry", "env-filter"] }
tracing-error = "0.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
jsonwebtoken = "9.3.1"
chrono = "0.4.42"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
rand = "0.9.2"
thiserror = "2.0.16"
color-eyre = "0.6.5"
regex = "1.11.2"
secrecy = { version = "0.10.3", features = ["serde"] }
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls", "cookies"] }

# runtime-tokio-rustls: Use the tokio runtime and rustls TLS backend (SOFT-DEPRECATED).
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate", "macros"] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.32.5", features = ["tokio-comp"] }

[dev-dependencies]
serde_json = "1.0.143"
fake = { version = "4.4.0", features = ["derive"] }
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
wiremock = "0.5.0"
