[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tower-http = { version = "0.6.11", features = ["fs", "cors", "trace"] }
# add the trace feature to tower-http
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["registry", "env-filter"] }
tracing-error = "0.2.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
chrono = "0.4.45"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
rand = "0.10.1"
thiserror = "2.0.18"
color-eyre = "0.6.5"
regex = "1.12.4"
secrecy = { version = "0.10.3", features = ["serde"] }
reqwest = { version = "0.13.4", default-features = false, features = ["json", "rustls", "cookies"] }

# sqlx 0.9 split runtime-tokio-rustls into separate runtime + TLS features.
sqlx = { version = "0.9", features = [ "runtime-tokio", "tls-rustls-ring", "postgres", "migrate", "macros"] }
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "1.2.3", features = ["tokio-comp"] }

[dev-dependencies]
serde_json = "1.0.150"
fake = { version = "5.1.0", features = ["derive"] }
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
wiremock = "0.6.5"
